updated total logics with dictionary

--- a/App/splitreceipt.kv
+++ b/App/splitreceipt.kv
@@ -122,7 +122,7 @@ ScreenManager:
                 ButtonType2:
                     id: mn_left_additem_btn
                     text: "Add Item"
-                    on_release: root.additem_popup()
+                    on_release: 
                     size_hint_y: 0.1
                     color: 1,1,1,1
 
@@ -157,7 +157,7 @@ ScreenManager:
                 ButtonType2:
                     id: mn_right_addprsn_btn
                     text: "Add Person"
-                    on_release: root.addperson_popup()
+                    on_release: 
                     size_hint_y: 0.1
                     color: 1,1,1,1
 
@@ -167,7 +167,7 @@ ScreenManager:
                     #on_release: root.clear_right_items_popup() 
 
                     text: "Add Preset"
-                    on_release: root.add_preset()
+                    on_release: root.add_preset_auto()
                     size_hint_y: 0.1
                     color: 1,1,1,1
 <GridScreen>:
